# example-customer-support

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: community_posts.json  customers.json  kb_articles.json  resolved_tickets.json
lib/: client.py  seed.py  support_agent.py
pages/: 1_seed_data.py  2_community_knowledge.py  3_ticket_resolution.py  4_kb_evolution.py  5_customer_context.py
